Bug 480527 (solos) - Cannot edit bookmarks in folders via context menu
Summary: Cannot edit bookmarks in folders via context menu
Status: RESOLVED FIXED
Alias: solos
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.08.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Juraj
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-30 09:51 UTC by 0BADC0DE
Modified: 2025-10-08 19:11 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.08
Sentry Crash Report:


Attachments
Screenshot for step no.4 (44.89 KB, image/png)
2024-01-30 09:51 UTC, 0BADC0DE
Details
Screenshot for editing folder (40.23 KB, image/png)
2024-01-30 09:51 UTC, 0BADC0DE
Details

Note You need to log in before you can comment on or make changes to this bug.
Description 0BADC0DE 2024-01-30 09:51:16 UTC
Created attachment 165343 [details]
Screenshot for step no.4

SUMMARY
I am not allowed to use the context menu to edit bookmarks in a folder of the BM toolbar.


STEPS TO REPRODUCE
1. Create a bookmark in the toolbar
2. Create a folder in the toolbar
3. Create a bookmark in that folder
4. Rightclick on the bookmark at step no.1
5. Open the folder at step no.2 and rightclick on the bookmark therein.

OBSERVED RESULT
At step no.4 I am presented with a context menu that allows me to operate on that bookmark (see screenshot).
At step no.5 the browser directly opens the bookmark in the current window.
I can rightclick the folder itself, though (see screenshot).

EXPECTED RESULT
Same behaviors for steps no.4 and no.5.

SOFTWARE/OS VERSIONS
Kernel Version : 6.7.2.zen1-1
Plasma Version : 5.27.10-2
KDE Version : 23.08.4-1
Frameworks Version : 5.114.0-1
Qt5 Version : 5.15.12+kde+r10-1
Qt6 Version : 6.6.1-3

ADDITIONAL INFORMATION
n/a
Comment 1 0BADC0DE 2024-01-30 09:51:49 UTC
Created attachment 165344 [details]
Screenshot for editing folder
Comment 2 Amir Khan 2024-01-30 17:15:50 UTC
As a bug triager, in testing this on KDENeon Development edition, fully updated on 30 Jan 2024, afternoon GMT zone, I found the following:

1. Enable visibility of bookmarks toolbar
2. Create new folder in bookmarks toolbar
3. Right-click new bookmarks folder for context menu.
4. New bookmark option appears, but cannot be operated.

Step 4 confirms that there does seem to be a bug in managing bookmark folders on the bookmarks toolbar when trying to use context menu.

Falkon version 24.04.70
Qt WebEngine 6.6.1
Comment 3 bart koens 2025-03-15 11:34:56 UTC
I bart,  (running Mint LMDE6 and the non-Flatpack install of Falkon)
do experience lack of flexibility in instering and moving entries in the folders.
Can't drag from addressbar into empty entries or move entries to othe folders .
also do not get any edit options on either right- or leftclick on folders, subfolders or items
Comment 4 Bug Janitor Service 2025-03-30 03:46:57 UTC
๐Ÿ›๐Ÿงน โš ๏ธ This bug has been in NEEDSINFO status with no change for at least 15 days. Please provide the requested information, then set the bug status to REPORTED. If there is no change for at least 30 days, it will be automatically closed as RESOLVED WORKSFORME.

For more information about our bug triaging procedures, please read https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging.

Thank you for helping us make KDE software even better for everyone!
Comment 5 Bug Janitor Service 2025-04-14 03:46:53 UTC
๐Ÿ›๐Ÿงน This bug has been in NEEDSINFO status with no change for at least 30 days. Closing as RESOLVED WORKSFORME.
Comment 6 0BADC0DE 2025-04-14 06:24:56 UTC
As of today:

GPU : Intel Corporation TigerLake-LP GT2 
Kernel Version : 6.14.2.zen1-1
Plasma Version : 6.3.4-4
KDE Version : 24.12.3-1
Frameworks Version : 6.12.0-1
Qt5 Version : 5.15.16+kde+r131-1
Qt6 Version : 6.9.0-1
Wayland Version : 1.23.1-1
Plasma/Wayland Protocols Version : 1.17.0-1
XOrg/Wayland Version : 24.1.6-1
Falkon: 24.12.3

The bug still persists.

Moreover, I want to dispute both the status of "WORKSFORME" and "RESOLVED" as there is no evidence of such a thing in any of the comments to this very report.
Please, reopen and, in case there is a solution, add the usual remark with the commit and the release that solves the problem.
Comment 7 bart koens 2025-04-19 09:02:19 UTC
   I do NOT agree with the closing as WORKSFORME ,the problem not being
   resolved regards Bart *Sent:* Monday, April 14, 2025 at 5:46 AM
   *From:* "Bug Janitor Service" <bugzilla_noreply@kde.org>
   *To:* bart.koens@gmx.com
   *Subject:* [Falkon] [Bug 480527] Cannot edit bookmarks in folders via
   context menuhttps://bugs.kde.org/show_bug.cgi?id=480527

   Bug Janitor Service <bug-janitor@kde.org> changed:

   What |Removed |Added
   ----------------------------------------------------------------------------
   Status|NEEDSINFO |RESOLVED
   Resolution|WAITINGFORINFO |WORKSFORME

   --- Comment #5 from Bug Janitor Service <bug-janitor@kde.org> ---
   ๐Ÿ›๐Ÿงน This bug has been in NEEDSINFO status with no change for at least
   30 days.
   Closing as RESOLVED WORKSFORME.

   --
   You are receiving this mail because:
   You are on the CC list for the bug.
Comment 8 Juraj 2025-04-20 10:44:21 UTC
Git commit 31ba9472369256804400a2db36b3dca3b4be2d73 by Juraj Oravec.
Committed on 20/04/2025 at 10:43.
Pushed by jurajo into branch 'master'.

Fix crash when creating bookmarks toolbar.

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +9    -3    src/lib/bookmarks/bookmarkstools.cpp

https://invent.kde.org/network/falkon/-/commit/31ba9472369256804400a2db36b3dca3b4be2d73
Comment 9 Juraj 2025-04-20 10:45:50 UTC
Git commit dca93d08742f7c4ed66831ae1bea6078ffc7d716 by Juraj Oravec.
Committed on 20/04/2025 at 10:45.
Pushed by jurajo into branch 'release/25.04'.

Fix crash when creating bookmarks toolbar.

Cherry-picked from? 31ba9472369256804400a2db36b3dca3b4be2d73

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +9    -3    src/lib/bookmarks/bookmarkstools.cpp

https://invent.kde.org/network/falkon/-/commit/dca93d08742f7c4ed66831ae1bea6078ffc7d716
Comment 10 Juraj 2025-04-20 10:53:42 UTC
I apolozige, mistake while fixing other bug.
Comment 11 Bug Janitor Service 2025-05-14 19:39:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/falkon/-/merge_requests/133
Comment 12 Juraj 2025-10-08 19:11:38 UTC
Git commit c78be20af431c1287173af8fed3ac4de01c32446 by Juraj Oravec.
Committed on 08/10/2025 at 19:03.
Pushed by jurajo into branch 'master'.

Add context menu for bookmarks menus
Related: bug 398856
FIXED-IN: 25.08

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +2    -1    src/lib/bookmarks/bookmarkitem.cpp
M  +3    -1    src/lib/bookmarks/bookmarkitem.h
M  +5    -5    src/lib/bookmarks/bookmarksmenu.cpp
M  +27   -16   src/lib/bookmarks/bookmarkstoolbar.cpp
M  +2    -0    src/lib/bookmarks/bookmarkstoolbar.h
M  +5    -5    src/lib/bookmarks/bookmarkstoolbarbutton.cpp
M  +4    -4    src/lib/bookmarks/bookmarkstools.cpp
M  +2    -2    src/lib/navigation/completer/locationcompleter.cpp
M  +1    -1    src/lib/navigation/completer/locationcompleterdelegate.cpp
M  +1    -1    src/lib/navigation/completer/locationcompleterrefreshjob.cpp
M  +21   -0    src/lib/tools/enhancedmenu.cpp
M  +1    -2    src/lib/tools/enhancedmenu.h

https://invent.kde.org/network/falkon/-/commit/c78be20af431c1287173af8fed3ac4de01c32446