Fix crash when creating bookmarks toolbar.

BUG: 480527

Cherry-picked from? 31ba9472369256804400a2db36b3dca3b4be2d73

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>